--- a/PlantaGUIFuentes/index.html
+++ b/PlantaGUIFuentes/index.html
@@ -22,6 +22,18 @@
 				<button type="submit" name="submit" id="submit">Solucionar</button>
 			</form>
 			<div class="results__container">
+				<ul>
+					<li><strong>PN:</strong> <span id="pn"></span></li>
+					<li><strong>PT:</strong> <span id="pt"></span></li>
+					<li><strong>PH:</strong> <span id="ph"></span></li>
+					<li><strong>energia_diaria:</strong> <span id="energia_diaria"></span></li>
+					<li><strong>d_aux:</strong>
+						<table id="d_aux_table">
+							<!-- Table content will be generated dynamically -->
+						</table>
+					</li>
+					<li><strong>ganancia:</strong> <span id="ganancia"></span></li>
+				</ul>
 			</div>
 		</section>
 	</body>
