feat: manejo de errores

--- a/PlantaGUIFuentes/index.html
+++ b/PlantaGUIFuentes/index.html
@@ -73,6 +73,7 @@
 				<button type="submit" name="submit" id="submit">Solucionar</button>
 			</form>
 			<div class="loader hidden">Cargando...</div>
+			<div class="error hidden"></div>
 			<div class="results__container"></div>
 		</section>
 	</body>
